Revision history for Linux-FD-Pid

{{$NEXT}}
          * Make sure Linux::FD::Pid isa IO::Handle

0.006     2023-01-03 00:45:16+01:00 Europe/Amsterdam
          * Eliminate dependency on glibc 2.36+

0.005     2023-01-02 03:48:36+01:00 Europe/Amsterdam
          * Allow signal name in send method
          * Handle non-blocking wait correctly

0.004     2022-12-30 19:02:26+01:00 Europe/Amsterdam
          * Add flag support

0.003     2021-08-16 23:07:04+02:00 Europe/Amsterdam
          * Include right header for syscall definition

0.002     2020-12-02 19:43:07+01:00 Europe/Amsterdam
          * Add wait method
          * Add get_handle method

0.001     2019-11-01 23:18:34+01:00 Europe/Amsterdam
          Initial release to an unsuspecting world